--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
 
                 <img src="img/IMG_4585.jpg" class="profile-pic img-responsive img-centered img-circle">
 
-                <p class="text-faded section-a-page-scroll">Hi! My name is Katherine and I am an American currently based in Utrecht, the Netherlands. I am a designer and researcher with a passion for cities. I believe that when the structured and analytical methods of social science are combined with the creative power of design, powerful solutions to seemingly complex issues in the built environment can be reached. This approach combines communication, graphic and analytical skills, which I have developed over the past six years in both professional and academic contexts. I have found this approach to be valuable on a number of scales and for a variety of projects. For an idea of what this approach can mean for you, please see <a href="#services">the services</a> below or some of <a href="#portfolio">my work</a>. Let&rsquo;s get in touch!</p>
-                <a href="https://www.dropbox.com/s/svune2r4y24jr8f/VanHoose_CV.pdf/?raw=1" target="_blank" class="btn btn-default btn-xl page-scroll">Download CV</a>
+                <p class="text-faded section-a-page-scroll">Hi! My name is Katherine and I am an American currently based in Utrecht, the Netherlands. I am a designer and researcher with a passion for cities. I combine the structured methods of social science with the creativity of design in projects related to the built environment. This approach includes communication, graphic and analytical skills, which I have developed over the past six years in both professional and academic contexts. I have found this approach to be valuable on a number of scales and for a variety of projects. For an idea of what this approach can mean for you, please see <a href="#services">the services</a> below or some of <a href="#portfolio">my work</a>. Let&rsquo;s get in touch!</p>
+                <a href="https://www.dropbox.com/s/ny8vo1fpan1j9df/VanHoose_CV.pdf/?raw=1" target="_blank" class="btn btn-default btn-xl page-scroll">Download CV</a>
             </div>
         </div>
     </div>
@@ -141,7 +141,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-lightbulb-o wow bounceIn text-primary"></i>
                     <h3 class="text-faded">Consulting</h3>
-                    <p class="">I have collaborated on a number of projects that involve researching complex issues found in the built enironment. My method of work is hands on: researching and defining the problem, organizing and communicating with multiple parties, searching for feasable and reasonable solutions and circulating results.</p>
+                    <p class="">I have collaborated on a number of projects that involve researching complex issues found in the built environment. My method of work is hands on: researching and defining the problem, organizing and communicating with multiple parties, searching for feasable and reasonable solutions and circulating results.</p>
                 </div>
             </div>
             
@@ -149,7 +149,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-pencil wow bounceIn text-primary"></i>
                     <h3 class="text-faded">Designing</h3>
-                    <p class="">As a trained designer, I understand the importance (and advantage) of presenting material in a visually appealing way. My experience lies in the creation of maps, communcative diagrams and layout design. Let’s think together to find the best way to present your work.</p>
+                    <p class="">As a trained designer, I understand the importance (and advantage) of presenting material in a visually appealing way. My experience lies in the creation of maps, communicative diagrams and layout design. Let’s think together to find the best way to present your work.</p>
                 </div>
             </div>
             
@@ -518,7 +518,7 @@
                         <ul class="list-inline item-details">
 
                             <li>Collaborators:
-                                <strong>Vereniging Deltametropool</strong>
+                                <strong>Deltametropolis Association</strong>
                             </li>
                             <li>Date:
                                 <strong>August 2013</strong>
@@ -528,7 +528,7 @@
                             </li>
 
                         </ul>
-                        <p>Short research analyzing the historical relationship between EU agricultural policies and Dutch spatial policies.</p>
+                        <p>Recents cuts to agriculture subsidy have left farmers and their holdings in the wake of a speeding policy boat. With this &lsquo;mini&rsquo; research, I analyzed the correlation between EU agricultural policies and Dutch spatial planning since 1950 to understand the implications of this relationship on the future of Dutch rural areas. Research resulting in a fact sheet of text and infographics.</p>
                         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                     </div>
                 </div>
