new email address deploy
generated from commit 6ddd0164a3cd70b83ff0d3b3c1973c7142374732

--- a/index.html
+++ b/index.html
@@ -292,11 +292,11 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 text-center">
-                        <a href="mailto:kavanhoose@gmail.com" target="_blank">
+                        <a href="mailto:katherine@vanhoose.work" target="_blank">
                         <i class="fa icon-mail fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                             <p class="contact-header text-faded">Mail</p>
                             <p class="text-faded">
-                                <span>kavanhoose@gmail.com</span>
+                                <span>katherine@vanhoose.work</span>
                             </p>
                         </a>
                     </div>
