email adress centered deploy
generated from commit 6ddd0164a3cd70b83ff0d3b3c1973c7142374732

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                         <i class="fa icon-mail fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                             <p class="contact-header text-faded">Mail</p>
                             <p class="text-faded">
-                                <span>katherine@vanhoose.work</span>
+                                <span class="left-correction">katherine@vanhoose.work</span>
                             </p>
                         </a>
                     </div>
