--- a/index.html
+++ b/index.html
@@ -10,41 +10,41 @@
 <title>vanhoosedotwork</title>
 
 <!-- Favicon -->
-<link rel="apple-touch-icon-precomposed" sizes="57x57" href="http://ernstkui.github.io/vanhoosedotwork/favicon/apple-touch-icon-57x57.png" />
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://ernstkui.github.io/vanhoosedotwork/favicon/apple-touch-icon-114x114.png" />
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://ernstkui.github.io/vanhoosedotwork/favicon/apple-touch-icon-72x72.png" />
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://ernstkui.github.io/vanhoosedotwork/favicon/apple-touch-icon-144x144.png" />
-<link rel="apple-touch-icon-precomposed" sizes="60x60" href="http://ernstkui.github.io/vanhoosedotwork/favicon/apple-touch-icon-60x60.png" />
-<link rel="apple-touch-icon-precomposed" sizes="120x120" href="http://ernstkui.github.io/vanhoosedotwork/favicon/apple-touch-icon-120x120.png" />
-<link rel="apple-touch-icon-precomposed" sizes="76x76" href="http://ernstkui.github.io/vanhoosedotwork/favicon/apple-touch-icon-76x76.png" />
-<link rel="apple-touch-icon-precomposed" sizes="152x152" href="http://ernstkui.github.io/vanhoosedotwork/favicon/apple-touch-icon-152x152.png" />
-<link rel="icon" type="image/png" href="http://ernstkui.github.io/vanhoosedotwork/favicon/favicon-196x196.png" sizes="196x196" />
-<link rel="icon" type="image/png" href="http://ernstkui.github.io/vanhoosedotwork/favicon/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/png" href="http://ernstkui.github.io/vanhoosedotwork/favicon/favicon-32x32.png" sizes="32x32" />
-<link rel="icon" type="image/png" href="http://ernstkui.github.io/vanhoosedotwork/favicon/favicon-16x16.png" sizes="16x16" />
-<link rel="icon" type="image/png" href="http://ernstkui.github.io/vanhoosedotwork/favicon/favicon-128.png" sizes="128x128" />
+<link rel="apple-touch-icon-precomposed" sizes="57x57" href="http://vanhoose.work/favicon/apple-touch-icon-57x57.png" />
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://vanhoose.work/favicon/apple-touch-icon-114x114.png" />
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://vanhoose.work/favicon/apple-touch-icon-72x72.png" />
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://vanhoose.work/favicon/apple-touch-icon-144x144.png" />
+<link rel="apple-touch-icon-precomposed" sizes="60x60" href="http://vanhoose.work/favicon/apple-touch-icon-60x60.png" />
+<link rel="apple-touch-icon-precomposed" sizes="120x120" href="http://vanhoose.work/favicon/apple-touch-icon-120x120.png" />
+<link rel="apple-touch-icon-precomposed" sizes="76x76" href="http://vanhoose.work/favicon/apple-touch-icon-76x76.png" />
+<link rel="apple-touch-icon-precomposed" sizes="152x152" href="http://vanhoose.work/favicon/apple-touch-icon-152x152.png" />
+<link rel="icon" type="image/png" href="http://vanhoose.work/favicon/favicon-196x196.png" sizes="196x196" />
+<link rel="icon" type="image/png" href="http://vanhoose.work/favicon/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/png" href="http://vanhoose.work/favicon/favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="http://vanhoose.work/favicon/favicon-16x16.png" sizes="16x16" />
+<link rel="icon" type="image/png" href="http://vanhoose.work/favicon/favicon-128.png" sizes="128x128" />
 <meta name="application-name" content="vanhoosedotwork"/>
 <meta name="msapplication-TileColor" content="#FFFFFF" />
-<meta name="msapplication-TileImage" cntent="http://ernstkui.github.io/vanhoosedotwork/favicon/mstile-144x144.png" />
-<meta name="msapplication-square70x70logo" cntent="http://ernstkui.github.io/vanhoosedotwork/favicon/mstile-70x70.png" />
-<meta name="msapplication-square150x150logo" cntent="http://ernstkui.github.io/vanhoosedotwork/favicon/mstile-150x150.png" />
-<meta name="msapplication-wide310x150logo" cntent="http://ernstkui.github.io/vanhoosedotwork/favicon/mstile-310x150.png" />
-<meta name="msapplication-square310x310logo" cntent="http://ernstkui.github.io/vanhoosedotwork/favicon/mstile-310x310.png" />
+<meta name="msapplication-TileImage" cntent="http://vanhoose.work/favicon/mstile-144x144.png" />
+<meta name="msapplication-square70x70logo" cntent="http://vanhoose.work/favicon/mstile-70x70.png" />
+<meta name="msapplication-square150x150logo" cntent="http://vanhoose.work/favicon/mstile-150x150.png" />
+<meta name="msapplication-wide310x150logo" cntent="http://vanhoose.work/favicon/mstile-310x150.png" />
+<meta name="msapplication-square310x310logo" cntent="http://vanhoose.work/favicon/mstile-310x310.png" />
 
 <!-- Bootstrap Core CSS -->
-<link rel="stylesheet" href="http://ernstkui.github.io/vanhoosedotwork/css/bootstrap.min.css" type="text/css">
+<link rel="stylesheet" href="http://vanhoose.work/css/bootstrap.min.css" type="text/css">
 
 <!-- Custom Fonts -->
 <link href='https://fonts.googleapis.com/css?family=Lato:300,700,400|Libre+Baskerville:400italic' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="http://ernstkui.github.io/vanhoosedotwork/font-awesome/css/font-awesome.min.css" type="text/css">
-<link rel="stylesheet" href="http://ernstkui.github.io/vanhoosedotwork/font-katherine/font-katherine.css" type="text/css">
+<link rel="stylesheet" href="http://vanhoose.work/font-awesome/css/font-awesome.min.css" type="text/css">
+<link rel="stylesheet" href="http://vanhoose.work/font-katherine/font-katherine.css" type="text/css">
 
 <!-- Plugin CSS -->
-<link rel="stylesheet" href="http://ernstkui.github.io/vanhoosedotwork/css/animate.min.css" type="text/css">
+<link rel="stylesheet" href="http://vanhoose.work/css/animate.min.css" type="text/css">
 
 <!-- Custom CSS -->
-<link rel="stylesheet" href="http://ernstkui.github.io/vanhoosedotwork/css/creative.css" type="text/css">
-<link rel="stylesheet" href="http://ernstkui.github.io/vanhoosedotwork/css/modals.css" type="text/css">
+<link rel="stylesheet" href="http://vanhoose.work/css/creative.css" type="text/css">
+<link rel="stylesheet" href="http://vanhoose.work/css/modals.css" type="text/css">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -555,15 +555,15 @@
 
 
         <!-- jQuery -->
-<script src="http://ernstkui.github.io/vanhoosedotwork/js/jquery.js"></script>
+<script src="http://vanhoose.work/js/jquery.js"></script>
 <!-- Bootstrap Core JavaScript -->
-<script src="http://ernstkui.github.io/vanhoosedotwork/js/bootstrap.min.js"></script>
+<script src="http://vanhoose.work/js/bootstrap.min.js"></script>
 <!-- Plugin JavaScript -->
-<script src="http://ernstkui.github.io/vanhoosedotwork/js/jquery.easing.min.js"></script>
-<script src="http://ernstkui.github.io/vanhoosedotwork/js/jquery.fittext.js"></script>
-<script src="http://ernstkui.github.io/vanhoosedotwork/js/wow.min.js"></script>
+<script src="http://vanhoose.work/js/jquery.easing.min.js"></script>
+<script src="http://vanhoose.work/js/jquery.fittext.js"></script>
+<script src="http://vanhoose.work/js/wow.min.js"></script>
 <!-- Custom Theme JavaScript -->
-<script src="http://ernstkui.github.io/vanhoosedotwork/js/creative.js"></script>
+<script src="http://vanhoose.work/js/creative.js"></script>
 
 
     </body>
